adding working route generation and diving graph work on frontend into microservices
